--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 </audio>
 
 <div class="card" id="card">
-  <h1>Hey Ratna❤️ <span id="name">YOUR_GIRLFRIEND_NAME</span></h1>
+  <h1>Hey ❤️ <span id="name">Ratna</span></h1>
   <p>Will you be my Valentine? 💘</p>
 
   <button id="yesBtn" onclick="sayYes()">YES 😍</button>
