--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Be My Valentine 💘        </title>
+<title>Be My Valentine 💘 </title>
 
 <style>
   body {
@@ -24,6 +24,14 @@
     box-shadow: 0 15px 40px rgba(0,0,0,0.25);
     z-index: 10;
   }
+  
+  .buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  position: relative;
+}
 
   h1 {
     color: #e60073;
@@ -48,11 +56,11 @@
     color: white;
   }
 
-  #noBtn {
-    background: #dc3545;
-    color: white;
-    position: absolute;
-  }
+  ##noBtn {
+  background: #dc3545;
+  color: white;
+  position: relative;
+}
 
   #result {
     display: none;
@@ -96,8 +104,11 @@
   <h1>Dear❤️ <span id="name">Ratna                    </span></h1>
   <p>Will you be my Valentine? 💘</p>
 
+  <div class="buttons">
   <button id="yesBtn" onclick="sayYes()">YES 😍</button>
   <button id="noBtn">NO 🙈</button>
+</div>
+
 
   <div id="result">
     <h2>I'm sooo lucky 😘💞</h2>
@@ -112,12 +123,11 @@
 
   // NO button runs away + shrinks
   noBtn.addEventListener("mouseover", () => {
-    const x = Math.random() * (window.innerWidth - 120);
-    const y = Math.random() * (window.innerHeight - 60);
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
-    noBtn.style.transform = "scale(0.8)";
-  });
+  const x = Math.random() * 120 - 60;
+  const y = Math.random() * 80 - 40;
+
+  noBtn.style.transform = `translate(${x}px, ${y}px) scale(0.9)`;
+});
 
   function sayYes() {
     document.getElementById("result").style.display = "block";
