--- a/index.html
+++ b/index.html
@@ -84,6 +84,25 @@
       opacity: 0;
     }
   }
+    .final-quote {
+  margin-top: 10px;
+  font-size: 16px;
+  font-style: italic;
+  color: #b30059;
+  animation: fadeIn 1.5s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(8px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+       
 </style>
 </head>
 
@@ -105,6 +124,9 @@
     <h2>You’re sooo lucky 😘💞</h2>
     <img src="https://media.giphy.com/media/l0MYyDa8S9ghzNebm/giphy.gif" />
     <p>I knew you’d say YES 💖</p>
+    <p class="final-quote">
+  “Knowing you has changed my world — loving you is the best thing I’ll ever do.” 💞
+</p>
   </div>
 </div>
 
