--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div id="result">
     <h2>You’re sooo lucky 😘💞</h2>
     <img src="https://media.giphy.com/media/l0MYyDa8S9ghzNebm/giphy.gif" />
-    <p>I knew you’d say YES 💖</p>
+    <p>I knew you’d say YES Love you Ammu💖</p>
   </div>
 </div>
 
