--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <button id="noBtn">NO 🙈</button>
 
   <div id="result">
-    <h2>You’re sooo lucky 😘💞</h2>
+    <h2>I'm sooo lucky 😘💞</h2>
     <img src="https://media.giphy.com/media/l0MYyDa8S9ghzNebm/giphy.gif" />
     <p>I knew you’d say YES Love you Ammu💖</p>
   </div>
