--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <div id="result">
     <h2>I'm sooo lucky 😘💞</h2>
-    <img src="blob:https://web.whatsapp.com/b3f22ce5-1aa8-4787-aeb6-a25aaca06e2d" />
+    <img src="https://www.pinterest.com/pin/697495061057318670/" />
     <p>I knew you’d say YES Love you Ammu💖</p>
   </div>
 </div>
