--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <div id="result">
     <h2>I'm sooo lucky 😘💞</h2>
-    <img src="https://media.giphy.com/media/MDJ9IbxxvDUQM/giphy.gif" alt="Lucky Gif">
+    <img src="https://tenor.com/search/love-you-baby-gifs" alt="Lucky Gif">
     <p>I knew you’d say YES Love you Ammu💖</p>
   </div>
 </div>
