--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <div id="result">
     <h2>I'm sooo lucky 😘💞</h2>
-    <img src="https://tenor.com/search/love-you-baby-gifs" alt="Lucky Gif">
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbjlvYTNjaG9pbnQwNW1vdm05ZGFsZWtodTVxenZlampwOTM4cXhiYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/gwisEpuibLPvu3seFQ/giphy.gif" alt="Lucky Gif">
     <p>I knew you’d say YES Love you Ammu💖</p>
   </div>
 </div>
